@@ -34,7 +34,6 @@ configurations {
 }
 
 dependencies {
-    exports files("libs/neiRecipeHandlers-1.0.0.jar")
     configurations.compile.extendsFrom(configurations.exports)
 }
 
@@ -45,7 +44,6 @@ jar {
     {
         exclude "META-INF/**"
         exclude "META-INF/*"
-        exclude "changelog.txt"
     }
     
     from('src/main/java') {
